Fix dark mode issues, fix district table reponsiveness

--- a/src/App.scss
+++ b/src/App.scss
@@ -365,7 +365,7 @@ $primary-theme: #8ac6d1;
   }
   thead .heading {
     display: flex;
-    min-width: 100px;
+    min-width: 90px;
     justify-content: center;
   }
 
@@ -443,23 +443,25 @@ $primary-theme: #8ac6d1;
     padding: 10px;
     border-radius: 5px;
     margin: 5px;
-    background: rgba(32,26,162,.12549);
-    color: rgba(32,26,162,.866667);
+    background: rgba(32,26,162,.125);
+    color: rgba(32,26,162,.9);
   }
 }
 
 .statewise-cases .districts-table {
+  display: flex;
+  flex-direction: column;
   table {
     width: 100%;
     tr td {
-      padding: 4px;
+      padding: 4px 0;
       text-align: center;
     }
     tr td:nth-child(2) {
       text-align: center;
     }
     th {
-      padding: 4px;
+      padding: 4px 0;
     }
   }
   .title {
@@ -997,11 +999,10 @@ $dark-font: #c5c5c5;
       transition: all 0.3s ease;
       background: #393939;
     }
-  }
-
-  .footer {
-    transition: all 0.3s ease;
-    background: #191919;
+    .testing-stats{
+      color: #9673b9;
+      background: rgba(64,0,128,.31);
+    }
     a {
       color: $dark-font;
     }
